# ms_mri

./: .envrc  .gitignore  README.md  checking.py  choroid_sdt_out.txt  copy_commands.ps1  monai-dependencie.txt  monai-dependencies.txt  ms_mri.code-workspace  params_list2.txt  progress.md  requirements.txt  requirements2.txt  requirements3.txt  requirements_basic.txt  requirements_noapex.txt  scratch.py  setup.cfg  stat_result.json  train_segmentation(6).ipynb
LONG_THOMAS/: notes.md
analysis/: README.md
aschoplex/: check_ensemble.ipynb  create_datalist.py  create_inference_set.py
choroid_thalamus_project/: MS_subjects.txt  NIND_subjects.txt  OIND_subjects.txt  candidates_to_process.txt  correlations.ipynb  helpers.py  logitudinal_analysis2.ipynb  longitudinal_analysis1.ipynb  longitudinal_analysis3.ipynb  longitudinal_for_R_MS.csv  longitudinal_for_R_MS_thalamus.csv  scratch.ipynb  sub1001-centroid-ventricle-sdt.csv  sub1001_volume_change.ipynb  subjects_to_process.txt  subjects_to_process0-1.txt  subjects_to_process1-1.txt  subjects_to_process1.txt
chp_seg/: copy_scans.py  notes.md
create_diagram/: Dockerfile  README.md  color_assignments.csv  color_reference.csv  color_reference_RdBu_CP_THAL1.csv  color_reference_RdBu_r_CP_THAL1.csv  color_reference_RdYlBu_CP_THAL1.csv  color_reference_YlOrRd_CP.csv  color_reference_coolwarm_CP_THAL1.csv  color_reference_coolwarm_CP_redhalf.csv  color_reference_coolwarm_active.csv  color_reference_coolwarm_t2lv.csv  color_reference_hot_CP.csv  color_reference_spectral_CP_THAL1.csv  create_diagram.py  make_diagram.sh  (+2 more)
(+1524 files in other folders)
