[metadata]
name = MSMRI
version = 0.1.0

[options]
packages = find:
package_dir = 
    = src
install_requires =
    apex
    attrs
    click
    filelock
    fire
    ipython
    loguru
    matplotlib
    mlflow
    monai
    nibabel
    numpy
    optuna
    pandas
    psutil
    pytest
    PyYAML
    torch
    tqdm
    xlrd

[options.package_data]
monai_training = config/*.json

[options.entry_points]
console_scripts =
    mri-data = mri_data.cli:cli
    monai-training = monai_training.cli:cli
